[package]
name = "hello-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ferris-says = "0.3.1"
tokio = { version = "1.28.1", features = ["full"] }
http-body-util = "0.1.0-rc.2"
hyper = { version = "1.0.0-rc.3", features = ["full"] }
actix-web = "4"
html2md = "0.2"
structopt = "0.3"
reqwest = { version = "0.11.18", features = ["blocking"] }