[package]
name = "thumbor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
anyhow = "1.0.71"
base64 = "0.21.0"
bytes = "1.4.0"
image = "0.24.6"
lazy_static = "1.4.0"
lru = "0.10.0"
percent-encoding = "2.2.0"
photon-rs = "0.3.2"
prost = "0.11.9"
reqwest = "0.11.18"
serde = { version = "1.0.163", features = ["derive"] }
tokio = { version = "1.28.1", features = ["full"] }
tower = { version = "0.4.13", features = ["util", "timeout", "load-shed", "limit"] }
tower-http = { version = "0.4.0", features = ["add-extension", "compression-full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"

[build-dependencies]
prost-build = "0.11.9"