[package]
name = "y-kv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.9.0"
futures = "0.3.28"
async-prost = "0.3.0"
tokio = { version = "1.28.1", features = ["rt", "rt-multi-thread", "net", "macros", "io-util"] }
thiserror = { version = "1.0.40", features = [] }
tracing-subscriber = "0.3.17"
tracing = { version = "0.1.37", features = [] }
anyhow = "1.0.71"


[build-dependencies]
prost-build = "0.11.9"