[package]
name = "example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
async-trait = "0.1.68"
sqlparser = "0.33.0"
polars = { version = "0.29.0", features = ["json", "lazy"] }
reqwest = { version = "0.11.18", default-features = false }
tokio = { version = "1.28.1", features = ["fs"] }
tracing = "0.1.37"

[dev-dependencies]
tracing-subscriber = "0.3.17"
tokio = { version = "1.28.1", features = ["full"] }